# Kaonic-ATAK-Plugin

./: .gitignore  Cargo.toml  Cross.toml  README.md  deny.toml
.github/workflows/: ci.yml
docs/: Build-and-Install.md  Change-Log.md  Configuration.md  Design-and-Safety.md  Diagnostics.md  Home.md  SSH-Status-and-Troubleshooting.md  Testing.md  _Sidebar.md
kaonic-atak-interface/: Cargo.toml  README.md  kaonic-atak-interface.service  kaonic-plugin.toml
kaonic-atak-interface/src/: main.rs
kaonic-atak-plugin/: Cargo.toml  README.md  kaonic-atak-plugin.service  kaonic-plugin.toml
kaonic-atak-plugin/src/: cot.rs  diagnostics.rs  interface.rs  main.rs  multicast.rs
kaonic-gateway/: Cargo.toml  index.html  kaonic-gateway.service  kaonic-plugin.toml
kaonic-gateway/assets/: style.css
kaonic-gateway/src/: app.rs  app_types.rs  audio.rs  config.rs  gateway_reticulum.rs  lib.rs  local_https.rs  main.rs  network.rs  radio.rs  state.rs  system_metrics.rs
kaonic-gateway/src/components/: navbar.rs
kaonic-gateway/src/http/: handlers.rs  installer.rs  mod.rs  ws.rs
kaonic-gateway/src/pages/: dashboard.rs  media.rs  mod.rs  network.rs  plugins.rs  radio.rs  reticulum.rs  update.rs  vpn.rs
kaonic-gateway/src/settings/: db.rs  mod.rs
kaonic-reticulum/: Cargo.toml
kaonic-reticulum/src/: lib.rs
kaonic-vpn/: Cargo.toml
kaonic-vpn/src/: config.rs  lib.rs  vpn.rs
kaonic-vpn/src/vpn/: codec.rs  links.rs  metrics.rs  peer.rs  platform.rs  router.rs  runtime.rs  tun.rs  types.rs
scripts/: cot_test.py  package-plugin.sh
