[package]
name = "kaonic-atak-plugin"
version = "0.1.1"
authors = ["jjames31"]
edition = "2021"

[[bin]]
name = "kaonic-atak-plugin"
path = "src/main.rs"

[dependencies]
kaonic-gateway = { path = "../kaonic-gateway" }
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", branch = "fix/add-timer-configs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
tokio-util = "0.7"
socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.13"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
log = "0.4"
rand = "0.8"
roxmltree = "0.20"
