[package]
name = "kaonic-reticulum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kaonic-ctrl  = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
kaonic-frame = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
kaonic-net   = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
reticulum    = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "bbb09ed7a8b6ead454737bd63671cb2f8be65e70" }
tokio-util   = "0.7"
radio-common = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
tokio        = { version = "1", features = ["full"] }
log          = "0.4"
rand         = "0.8.5"
