[package]
name = "kaonic-vpn"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[features]
run = ["dep:reticulum", "dep:kaonic-reticulum", "dep:tokio-util", "dep:cidr-v3"]

[dependencies]
reticulum        = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", branch = "fix/add-timer-configs", optional = true }
kaonic-reticulum = { path = "../kaonic-reticulum", optional = true }
cidr-v3          = { package = "cidr", version = "0.3", features = ["serde"], optional = true }
cidr             = { version = "0.2", features = ["serde"] }
radio-common     = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
tokio-util       = { version = "0.7", optional = true }
etherparse       = "0.19"
if-addrs         = "0.13"
rmp-serde        = "1"
parking_lot      = "0.12"

log   = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
riptun = { version = "0.1", default-features = false, features = ["tokio-impl"] }
